--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap');
 
+/* Reset and Basic Styles */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+body, h1, h2, h3, h4, p, figure, blockquote, dl, dd {
+  margin: 0;
+}
+
+ul[role='list'], ol[role='list'] {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 img {
@@ -11,61 +22,39 @@ img {
   display: block;
 }
 
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-figure,
-blockquote,
-dl,
-dd {
-  margin: 0;
-}
-
-ul[role='list'],
-ol[role='list'] {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
+/* CSS Variables */
 :root {
+  /* Colors */
   --clr-black-800: hsl(200deg, 15%, 8%);
   --clr-black-500: hsl(207deg, 26%, 17%);
-  --clr-black-300: hsl(209deg, 23%, 22%); 
+  --clr-black-300: hsl(209deg, 23%, 22%);
   --clr-white-800: hsl(0deg 0% 52%);
   --clr-white-500: hsl(0deg 0% 95%);
   --clr-white-300: hsl(0deg 0% 100%);
-
+  
+  /* Fonts */
   --ff-base: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-
   --fw-light: 300;
   --fw-semi-bold: 600;
   --fw-extra-bold: 800;
-
   --fs-300: .875rem;
   --fs-400: 1rem;
   --fs-900: 1.5rem;
 
+  /* Spacing and Sizing */
   --custom-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   --custom-border-radius: 8px;
-  --custom-spacing-sm: 0.8rem;
-}
+  --custom-spacing-sm: 0.8rem;  
+  --custom-spacing-md: 1.375rem;
 
-/* Light Theme */
-.light-theme {
-  --background-color: var(--clr-white-500);
-  --background-color-accent: var(--clr-white-300);
-  --text-color: (var--clr-white-800);
-}
+  /* Themes */
+  --background-color-light: var(--clr-white-500);
+  --background-color-accent-light: var(--clr-white-300);
+  --text-color-light: var(--clr-black-800);
 
-/* Dark Theme */
-.dark-theme {
-  --background-color: var(--clr-black-500);
-  --background-color-accent: var(--clr-black-300);
-  --text-color: var(--clr-white-300);
+  --background-color-dark: var(--clr-black-500);
+  --background-color-accent-dark: var(--clr-black-300);
+  --text-color-dark: var(--clr-white-300);
 }
 
 html {
@@ -80,66 +69,119 @@ body {
   font-weight: var(--fw-light);
 }
 
+/* Themes */
+.light-theme {
+  --background-color: var(--background-color-light);
+  --background-color-accent: var(--background-color-accent-light);
+  --text-color: var(--text-color-light);
+}
+
+.dark-theme {
+  --background-color: var(--background-color-dark);
+  --background-color-accent: var(--background-color-accent-dark);
+  --text-color: var(--text-color-dark);
+}
+
+/* Base Button Style */
+.button {
+  margin-block: 0.5rem 0rem;
+  color: var(--text-color);
+  border: none;
+  border-radius: var(--custom-border-radius);
+  appearance: none;
+  background-color: var(--background-color-accent);
+  box-shadow: var(--custom-box-shadow);
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: var(--background-color-accent-hover);
+}
+
+.button:active {
+  background-color: var(--background-color-accent-active);
+}
+
+.button-sm {
+  padding: 0.4rem 0.4rem;
+  font-size: var(--fs-300);
+}
+
+.button-md {
+  padding: 0.8rem 3rem;
+}
+
 /* ================================
 header
 ================================ */
 .header-container {
   display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-template-areas: "title toggle";
-  margin-inline: var(--custom-spacing-sm);
-  padding: var(--custom-spacing-sm);
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "title toggle";
+  padding: var(--custom-spacing-md);
   background-color: var(--background-color-accent);
   box-shadow: var(--custom-box-shadow);
 }
 
 .header-container .title {
+  display: grid;
   grid-area: title;
-	align-self: center;
-  font-size: var(--fs-400);
+}
+
+.title .website-link {
+  align-self: center;
+  font-size: var(--fs-300);
   color: var(--text-color);
+  text-decoration: none;
 }
 
 .header-container .toggle {
   grid-area: toggle;
-	align-self: center;
-	justify-self: end;
+  align-self: center;
+  justify-self: end;
   background-color: transparent;
   color: var(--text-color);
   font: inherit;
   border: none;
+  font-size: var(--fs-300);
 }
 
 .header-container .toggle:hover,
 .header-container .toggle:focus-visible {
-  position: relative;
   cursor: pointer;
-  background-color: transparent;
-  border: none;
+}
+
+@media(min-width: 575px) {
+  .title .website-link, .header-container .toggle {
+    font-size: var(--fs-900);
+  }
+  .header-container .toggle {
+    font-size: var(--fs-400);
+  }
 }
 
 /* ================================
 search and filter
 ================================ */
 .forms-container {
-  position: relative;
   display: grid;
-	gap: var(--custom-spacing-sm);
-	grid-template-columns: 1fr;
-	grid-template-areas: "search" "filter";
-  margin-inline: var(--custom-spacing-sm);
-  margin-block: var(--custom-spacing-sm);
+  gap: var(--custom-spacing-sm);
+  grid-template-columns: 1fr;
+  grid-template-areas: "search" "filter";
+  margin: var(--custom-spacing-sm);
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  .forms-container {
     grid-template-columns: 4fr 1fr;
     grid-template-areas: "search filter";
   }
 }
 
 .forms-container .search {
-	grid-area: search;
-	align-self: center;
-	display: grid;
+  grid-area: search;
+  display: grid;
+  align-self: center;
   box-shadow: var(--custom-box-shadow);
 }
 
@@ -152,8 +194,7 @@ search and filter
   color: var(--text-color);
 }
 
-input:hover,
-input:focus-visible {
+input:hover, input:focus-visible {
   border: none;
   outline: none;
 }
@@ -164,18 +205,14 @@ input::placeholder {
 
 .fa-search {
   position: absolute;
-  left: 0.8rem;
+  left: 1.725rem;
   transform: translateY(110%);
   color: var(--text-color);
 }
 
 .forms-container .filter {
-	grid-area: filter;
-	align-self: center;
-}
-
-.forms-container .filter label {
-  display: none;
+  grid-area: filter;
+  align-self: center;
 }
 
 .forms-container .filter-select {
@@ -194,7 +231,7 @@ input::placeholder {
 }
 
 .forms-container .filter-select::after {
-  content: '▿';
+  content: '▾';
   color: var(--text-color);
   font-size: var(--fs-900);
   position: absolute;
@@ -204,11 +241,13 @@ input::placeholder {
   pointer-events: none;
 }
 
+.forms-container label {
+  display: none;
+}
+
 /* ================================
 card
 ================================ */
-
-/* General styling for the card container */
 .card-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -216,9 +255,8 @@ card
   padding-inline: var(--custom-spacing-sm);
 }
 
-/* Styling for each card */
 .card {
-  background-color: #fff;
+  background-color: var(--background-color-accent);
   border-radius: var(--custom-border-radius);
   box-shadow: var(--custom-box-shadow);
   overflow: hidden;
@@ -229,28 +267,23 @@ card
   transform: translateY(-5px);
 }
 
-/* Styling for the card image wrapper */
 .card-image-wrapper {
-  display: inline flow-root list-item;
   position: relative;
   width: 100%;
   padding-top: 56.25%; /* 16:9 Aspect Ratio */
   overflow: hidden;
-  background-color: #f0f0f0; /* Fallback color in case image fails to load */
+  background-color: var(--clr-black-500); /* Fallback color in case image fails to load */
 }
 
 .card-image {
-  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: 45%;
 }
 
-/* Styling for the card content */
 .card-content {
-  padding: 15px;
+  padding: var(--custom-spacing-sm);
   color: var(--text-color);
 }
 
@@ -273,24 +306,21 @@ card
   font-weight: bold;
 }
 
-/* Responsive adjustments */
 @media (max-width: 768px) {
   .card-container {
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 15px;
   }
 }
 
 @media (max-width: 480px) {
   .card-container {
     grid-template-columns: 1fr;
-    gap: 0.8rem;
     padding: 0;
   }
 
   .card {
     margin: 0 auto;
-    width: 90%;
+    width: 94%;
   }
 }
 
@@ -298,58 +328,60 @@ card
 country details
 ================================ */
 .country-details {
-  /* display: grid;
-  justify-content: center;
-  margin-block-start: 2rem;
-  margin-inline: 2rem; */
-}
-
-.country-details button {
-  padding: 1rem;
-  color: var(--text-color);
-  border: none;
-  appearance: none;
-  background-color: var(--background-color-accent);
-  box-shadow: var(--custom-box-shadow);
-}
-
-.country-details button:hover {
-  background-color: var(--background-color-accent-hover);
-  cursor: pointer;
-}
-
-.country-details button:active {
-  background-color: var(--background-color-accent-active);
-}
-
-.country-details .card-container {
-  /* padding: 0;
   display: grid;
-	grid-template-columns: 1fr;
-	justify-items: center;
-  margin-block-end: 4rem; */
-}  
-
-.country-details .card {
-  /* box-shadow: var(--shopify-box-shadow);
   grid-template-columns: 1fr;
-  @media(min-width: 500px) {
-    grid-template-columns: 1fr 1fr;
-  } */
-}  
-
-.country-details .card-image {
-  /* height: auto; */
+  gap: 20px;
+  padding: 20px;
+  margin: 0 auto;
+  max-width: 1420px;
 }
 
-.country-details .card-title {
-
+.detail-card-container, .detail-card {
+  display: grid;
+  gap: 20px;
 }
 
-.country-details .card-content {
+.detail-card {
+  grid-template-columns: 1fr;
+}
 
+.detail-card-image {
+  width: 100%;
+  height: auto;
+}
+
+.detail-card-title {
+  font-size: var(–fs-900);
+  margin: 10px 0;
+}
+
+.detail-card-content {
+  list-style: none;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr auto;
+}
+
+.detail-card-content li {
+  margin: 5px 0;
 }
 
 .border-countries {
-  padding-inline: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+@media (min-width: 768px) {
+  .detail-card {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .detail-card-image {
+    grid-column: 1;
+  }
+
+  .detail-card-title, .detail-card-content, .border-countries {
+    grid-column: 2;
+  }
 }
